--- a/firebase.json
+++ b/firebase.json
@@ -1,22 +1,16 @@
-// Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
-
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyCZghluebhQYqIkaz31GsFyO2QPn-UjNDQ",
-  authDomain: "music-9ae9f.firebaseapp.com",
-  databaseURL: "https://music-9ae9f-default-rtdb.asia-southeast1.firebasedatabase.app",
-  projectId: "music-9ae9f",
-  storageBucket: "music-9ae9f.appspot.com",
-  messagingSenderId: "1026836909562",
-  appId: "1:1026836909562:web:6295ec23b36eaa2c942843",
-  measurementId: "G-HMJYR5JZPR"
-};
-
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
+{
+  "hosting": {
+    "public": "build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
+}
