--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^10.6.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.19.0",
     "react-scripts": "^5.0.1",
+    "sort-by": "^1.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
