--- a/package.json
+++ b/package.json
@@ -6,7 +6,16 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
+    "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.2.0",
+    "express": "^4.18.2",
     "firebase": "^10.6.0",
+    "https": "^1.0.0",
+    "https-browserify": "^1.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^17.0.2",
@@ -15,6 +24,7 @@
     "react-router-dom": "^6.19.0",
     "react-scripts": "^5.0.1",
     "sort-by": "^1.2.0",
+    "stream-browserify": "^3.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
